--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Python
       uses: actions/setup-python@v3
@@ -25,7 +27,27 @@ jobs:
         python -m pip install --upgrade pip
         pip install ruff
 
-    - name: Run Linter (Check Only)
+    - name: Run Linter & Formatter (Push - Check Only)
+      if: github.event_name == 'push'
       run: |
         ruff check .
         ruff format --check .
+
+    - name: Run Linter & Formatter (Pull Request)
+      if: github.event_name == 'pull_request'
+      run: |
+        ruff check . --fix
+        ruff format .
+
+    - name: Commit changes (Pull Request)
+      if: github.event_name == 'pull_request'
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add -A
+        if git diff --exit-code --staged; then
+          echo "No changes to commit"
+        else
+          git commit -m "[GitHub Action] Lint and format code with Ruff"
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+        fi
