include uv lock and envrc files in gitignore and reset example source code

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ htmlcov/
 .venv
 venv/
 ENV/
+.envrc
 
 # VSCode Extension
 node_modules/
@@ -62,6 +63,9 @@ Thumbs.db
 
 # Linting
 .ruff_cache/
+
+# UV
+uv.lock
 
 # Miscellaneous
 etc/
